# FinBot

./: .env.example  .gitignore  CLAUDE.md  National_Stock_Exchange_of_India_Ltd.csv  README.md  fetch_data.py  main.py  pyproject.toml  rag_eval_comparison.xlsx  requirements.txt  run_pipeline.sh
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.decide.md  speckit.depgraph.discover.md  speckit.depgraph.impact.md  speckit.depgraph.resolve.md  speckit.depgraph.visualize.md  speckit.handover.md  speckit.implement.md  speckit.metrics.md  speckit.monitor.md  speckit.napkin-distill.md  speckit.napkin-record.md  speckit.napkin-review.md  speckit.plan.md  speckit.resume.md  speckit.retrospect.md  speckit.review.md  speckit.specify.md  speckit.tasks.md  speckit.threat-model.md  speckit.verify.md
.specify/decisions/: index.md
.specify/graphs/: index.json
.specify/memory/: constitution.md  napkin.md
.specify/templates/: adr-template.md  agent-file-template.md  handover-template.md  monitoring-template.md  napkin-entry-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/: auth.py  communities.py  evaluate_rag.py  ingest.py  main.py  nifty_fin_graph.html  rag_eval_results.xlsx  retriever.py  test_embedding.py  test_hf.py  visualize_graph.py
backend/legacy/: ingest.py  retriever.py
data/: National_Stock_Exchange_of_India_Ltd.csv
data/communities/: community_summaries.json
data/networkx/: nifty_graph.pkl
frontend/: index.html  package-lock.json  package.json
scripts/: ingest_supabase.py  migrate_sqlite_to_supabase.py
(+115 files in other folders)
