[project]
name = "niftybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "pip>=26.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.4.1",
    "supabase>=2.31.0",
    "uvicorn>=0.46.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.14.1",
    "yfinance>=1.3.0",
]
