[project]
name = "niftybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "networkx>=3.6.1",
    "pip>=26.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.46.0",
    "openpyxl>=3.1.2",
]
